<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtInputEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/primary_text_light"
            android:textColorHint="@android:color/secondary_text_dark" />

        <EditText
            android:id="@+id/txtInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/name_text"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@android:color/primary_text_light"
            android:textColorHint="@android:color/secondary_text_dark" />

        <EditText
            android:id="@+id/txtInputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="@android:color/primary_text_light"
            android:textColorHint="@android:color/secondary_text_dark" />

        <EditText
            android:id="@+id/txtInputPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@android:color/primary_text_light"
            android:textColorHint="@android:color/secondary_text_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@color/common_google_signin_btn_text_light_default"
                android:text="@string/sign_up"
                android:textColor="@color/common_google_signin_btn_text_dark" />

            <TextView
                android:id="@+id/link_sign_in_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignUp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:onClick="openSignIn"
                android:text="@string/sign_in_u"
                android:textColor="#0d47a1"
                android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>