<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtInputEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorLightText"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorLightText"
            android:textColorHint="@color/colorDarkText" />

        <EditText
            android:id="@+id/txtInputPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorLightText"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorLightText"
            android:textColorHint="@color/colorDarkText" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/common_google_signin_btn_text_light_default"
                android:text="@string/sign_in"
                android:textColor="@color/common_google_signin_btn_text_dark" />

            <TextView
                android:id="@+id/link_sign_in_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignIn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:onClick="openSignUp"
                android:text="@string/sign_up_u"
                android:textColor="#0d47a1"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateOnly="true"
        android:max="100"
        android:minWidth="260dp"
        android:minHeight="80dp"
        android:progress="1" />

</RelativeLayout>